Bug 1963506: Mark PerfStats::sCollectionMask as a relaxed ordering atomic. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D249668